--- a/hello.conf
+++ b/hello.conf
@@ -12,4 +12,14 @@ server {
     sub_filter 'server_address' '$server_addr:$server_port';
     sub_filter 'server_date' '$time_local';
     sub_filter 'request_id' '$request_id';
+
+    location /api/v1 {
+        # default bridge ip of docker
+        proxy_pass http://172.17.0.1;
+
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_redirect off;
+    }
 }
